bug fixes for collapsable header

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -41,7 +41,7 @@ page-home {
   }
 
   #home-content.collapse{
-    background-position: 0 -200px;
+    background-position: 0 -150px;
   }
 
   .home-fixed{
